# Open_env_Hackathon

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  archi.md  changes.md  changes_additional.md  check_hack_submission  client.py  env_example.txt  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run.md
environment/: __init__.py  chain_objective.py  config.py  env.py  models.py  reward.py  state_manager.py
environment/data/: __init__.py
environment/data/task1/: __init__.py  vulnerable_code.py
environment/data/task2/: __init__.py  app.py  config.py  models.py  utils.py
environment/data/task3/: __init__.py  auth.py  config.py  middleware.py  serializers.py  views.py
environment/graders/: __init__.py  base_grader.py  grader1.py  grader2.py  grader3.py
environment/security_analysis/: __init__.py  attack_chain.py  dataflow_analysis.py  dependency_graph.py  exploitability.py  static_analysis.py
environment/tasks/: __init__.py  base_task.py  task1_single_file.py  task2_multifile.py  task3_realworld.py
server/: Dockerfile  __init__.py  app.py
tests/: test_cached_metrics.py  test_env.py  test_evidence.py  test_graders.py  test_models.py  test_precision.py  test_score_open_interval.py  test_traps.py
