[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-vulnerability-scanner-openenv"
version = "1.0.0"
description = "OpenEnv environment for AI-driven security vulnerability auditing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Team Suika" }
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "openai==1.30.1",
  "httpx==0.27.0",
  "requests>=2.32.0",
  "openenv-core",
  "pytest==8.2.0",
  "pytest-asyncio==0.23.7",
  "python-dotenv==1.0.1",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["environment*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
